# turniprenderer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  run_demo.sh
demo/: CMakeLists.txt  generate_sources.sh
demo/assets/: sphere_demo.fbx
demo/assets/shaders/: pbr.lighting  phong.lighting
demo/src/: main.cpp  test_resource_manager.cpp  test_scene.cpp
demo/src/free_camera/: component.h  system.cpp  system.h
libturniprenderer/: CMakeLists.txt  generate_sources.sh
libturniprenderer/include/turniprenderer/: bounds.h  component.h  context.h  context_scene_aware.h  debug_window.h  dirlight_component.h  dirlight_system.h  engine_fwd.h  entity.h  glm.h  input.h  light.h  material.h  mesh.h  renderer.h  resource.h  resource_manager.h  scene.h  scene.impl  scene_access.h  scene_object.h  shader.h  system.h  texture.h  transform.h
libturniprenderer/include/turniprenderer/assets/: asset_manager.h
libturniprenderer/include/turniprenderer/data/: hierarchy.h  hierarchy.impl
libturniprenderer/include/turniprenderer/ecs/: entity.h  scene.h  system.h
libturniprenderer/include/turniprenderer/ecs/impl/: entity_content.h  entity_def.h  scene_hierarchy_base.h
libturniprenderer/include/turniprenderer/helpers/: pointer_iterator.h
libturniprenderer/include/turniprenderer/memory/: bitmap_vector.h  heirarchy.h  heirarchy.impl
libturniprenderer/include/turniprenderer/rendering/: buffers.h  material.h  mesh.h  renderer.h  renderhelpers.h  shader.h  shadowmap.h  texture.h  texture_config.h
libturniprenderer/include/turniprenderer/util/: bounds.h  context_aware.h  context_scene_aware.h
libturniprenderer/src/: CMakeLists.txt  context.cpp  debug_window.cpp  dirlight_system.cpp  entity.cpp  generate_sources.sh  mesh.cpp  renderer.cpp  scene.cpp  shader.cpp  texture.cpp
libturniprenderer/src/assets/: asset_manager.cpp
libturniprenderer/src/rendering/: mesh.cpp  renderer.cpp  renderhelpers.cpp  shader.cpp  texture.cpp
libturniprenderer/src/test-folder/: main.cpp
libturniprenderer/src/test-folder-moved/: main.cpp
samples/: generate_sample_cmake.sh
samples/cube/: CMakeLists.txt  main.cpp
